Set up index page to explain what we will do

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,11 +16,18 @@
       <a href="https://x-govuk.github.io/govuk-prototype-filters/date/" class="govuk-link" rel="noreferrer noopener" target="_blank">
         X gov filters (opens in new tab)</a>
     </p>
-    <h2 class="govuk-heading-l">Dates examples</h2>
+    <h2 class="govuk-heading-l">About</h2>
     <p class="govuk-body">Here are some hard coded dates that we will turn into
       dynamic dates. We will also do some calculations on these dates.</p>
     <p class="govuk-body">Pull this branch to see the end product</p>
-  </div>
+    <h2 class="govuk-heading-l">Dates examples</h2>
+    <p class="govuk-body">Today's date is 5 February 2025</p>
+    <p class="govuk-body">Tomorrow's date is 6 February 2025</p>
+    <p class="govuk-body">Yesterday's date is 5 February 2025</p>
+    <p class="govuk-body">In 1 week it will be 12 February 2025</p>
+    <p class="govuk-body">In 2 months it will be 12 April 2025</p>
+    <p class="govuk-body">In 2.5 months it will be 30 April 2025</p>
+    </div>
 </div>
 
 {% endblock %}
