Fix bad link to example repo

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,7 +18,7 @@
       <h2 class="govuk-heading-l">About</h2>
       <p class="govuk-body">Here are some hard coded dates that we will turn into
         dynamic dates. We will also do some calculations on these dates.</p>
-      <p class="govuk-body"><a href="https://github.com/titlescreen/xgov-d±ate-filter-demo/tree/filters-added-and-examples-made" class="govuk-link" rel="noreferrer noopener" target="_blank">
+      <p class="govuk-body"><a href="https://github.com/titlescreen/xgov-date-filter-demo/tree/filters-added-and-examples-made" class="govuk-link" rel="noreferrer noopener" target="_blank">
         Pull this branch to see the end product</a></p>
       <h2 class="govuk-heading-l">Dates examples</h2>
       <p class="govuk-body">Today's date is 5 February 2025</p>
